--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <img src="images/header.png" alt="" />
+          <div class="hero-section-image">
+            <img src="images/header.png" alt="" />
+          </div>
         </div>
         <div class="col-sm-12 col-md-6">
           <div class="hero-section-data">
